# dtcc-common

./: README.md  pyproject.toml
.github/workflows/: ci-wheels.yml
docs/: installation.md
dtcc_common/: __init__.py  dtcc_logging.py  logger.py
src/dtcc_common/: dtcc_logging.py
